--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
 		"babel-preset-env": "^1.6.1",
 		"babel-preset-stage-2": "^6.24.1",
 		"dialog-polyfill": "^0.4.9",
-		"stimulus": "^0.9.0"
+		"stimulus": "^0.9.0",
+		"typescript": "^2.6.2"
 	}
 }
